float team content to center

--- a/index.html
+++ b/index.html
@@ -213,44 +213,44 @@
                <div style="margin: auto; width: 94%; text-align: justify;">
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-left: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
-                        <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
+                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Raadwan Masum</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/RGBHack/Spark" target="_blank">
-                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
+                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: center;">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
-                        <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
+                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Safin Singh</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/RGBHack/Spark" target="_blank">
-                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
+                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: center;">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
-                        <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
+                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Rohan Juneja</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/RGBHack/Spark" target="_blank">
-                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
+                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: center;">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
-                        <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
+                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Aadit Gupta</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/RGBHack/Spark" target="_blank">
-                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
+                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: center;">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
