remove text decoration for team names

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                </div>
                <div style="margin: auto; width: 94%; text-align: justify;">
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-left: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
-                     <a style="color: black; text-decoration: underline;" target="_blank">
+                     <a style="color: black;"">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Raadwan Masum</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
@@ -223,7 +223,7 @@
                      </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
-                     <a style="color: black; text-decoration: underline;" target="_blank">
+                     <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Safin Singh</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
@@ -234,7 +234,7 @@
                      </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
-                     <a style="color: black; text-decoration: underline;" target="_blank">
+                     <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Rohan Juneja</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
@@ -245,7 +245,7 @@
                      </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
-                     <a style="color: black; text-decoration: underline;" target="_blank">
+                     <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Aadit Gupta</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
