--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
       <svg width="0" height="0" class="hidden">
          <svg width="0" height="0" class="hidden">
             <symbol viewBox="0 0 24 24" id="github-icon">
-               <path d="M10.9 2.1c-4.6.5-8.3 4.2-8.8 8.7-.5 4.7 2.2 8.9 6.3 10.5.3.1.6-.1.6-.5v-1.6s-.4.1-.9.1c-1.4 0-2-1.2-2.1-1.9-.1-.4-.3-.7-.6-1-.3-.1-.4-.1-.4-.2 0-.2.3-.2.4-.2.6 0 1.1.7 1.3 1 .5.8 1.1 1 1.4 1 .4 0 .7-.1.9-.2.1-.7.4-1.4 1-1.8-2.3-.5-4-1.8-4-4 0-1.1.5-2.2 1.2-3-.1-.2-.2-.7-.2-1.4 0-.4 0-.9.2-1.3 0-.2.2-.3.3-.3h.1c.5.1 1.5.4 2.4 1.3.6-.2 1.3-.3 2-.3s1.4.1 2 .3c.9-.9 2-1.2 2.5-1.3h.1c.2 0 .3.1.4.3v1.3c0 .8-.1 1.2-.2 1.4.7.8 1.2 1.8 1.2 3 0 2.2-1.7 3.5-4 4 .6.5 1 1.4 1 2.3v2.6c0 .3.3.6.7.5 3.7-1.5 6.3-5.1 6.3-9.3 0-6-5.1-10.7-11.1-10z"></path>
+              <path d="M10.9 2.1c-4.6.5-8.3 4.2-8.8 8.7-.5 4.7 2.2 8.9 6.3 10.5.3.1.6-.1.6-.5v-1.6s-.4.1-.9.1c-1.4 0-2-1.2-2.1-1.9-.1-.4-.3-.7-.6-1-.3-.1-.4-.1-.4-.2 0-.2.3-.2.4-.2.6 0 1.1.7 1.3 1 .5.8 1.1 1 1.4 1 .4 0 .7-.1.9-.2.1-.7.4-1.4 1-1.8-2.3-.5-4-1.8-4-4 0-1.1.5-2.2 1.2-3-.1-.2-.2-.7-.2-1.4 0-.4 0-.9.2-1.3 0-.2.2-.3.3-.3h.1c.5.1 1.5.4 2.4 1.3.6-.2 1.3-.3 2-.3s1.4.1 2 .3c.9-.9 2-1.2 2.5-1.3h.1c.2 0 .3.1.4.3v1.3c0 .8-.1 1.2-.2 1.4.7.8 1.2 1.8 1.2 3 0 2.2-1.7 3.5-4 4 .6.5 1 1.4 1 2.3v2.6c0 .3.3.6.7.5 3.7-1.5 6.3-5.1 6.3-9.3 0-6-5.1-10.7-11.1-10z"></path>
+            </symbol>
+            <symbol viewBox="0 0 50 50" id="devpost">
+              <path d="M13.938 7L3.851 25.004 14.199 43h21.864l10.082-18L36.062 7zM18 15h7.156C30.598 15 35 19.473 35 25s-4.402 10-9.844 10H18zm4 4v12h3c3.309 0 6-2.691 6-6s-2.691-6-6-6z"></path>
             </symbol>
          </svg>
       </svg>
