--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
+                     <a href="https://devpost.com/raad1masum" target="_blank">
+                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                           <use xlink:href="#devpost"></use>
+                        </svg>
+                    </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black;">
@@ -235,6 +240,11 @@
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
+                     <a href="https://devpost.com/safinsingh" target="_blank">
+                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                           <use xlink:href="#devpost"></use>
+                        </svg>
+                    </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
@@ -246,6 +256,11 @@
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
+                     <a href="https://devpost.com/rohanj2006" target="_blank">
+                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                           <use xlink:href="#devpost"></use>
+                        </svg>
+                     </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
@@ -255,6 +270,11 @@
                       <a href="https://github.com/MrWannaCry" target="_blank">
                         <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
                            <use xlink:href="#github-icon"></use>
+                        </svg>
+                     </a>
+                     <a href="https://devpost.com/MrWannaCry" target="_blank">
+                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                           <use xlink:href="#devpost"></use>
                         </svg>
                      </a>
                   </div>
