add linkedin links for team

--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
                            <use xlink:href="#devpost"></use>
                         </svg>
                     </a>
+                    <a href="https://www.linkedin.com/in/raadwan-masum-9147bb1a5/" target="_blank">
+                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                           <use xlink:href="#linkedin"></use>
+                        </svg>
+                    </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black;">
@@ -246,6 +251,11 @@
                      <a href="https://devpost.com/safinsingh" target="_blank">
                         <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
                            <use xlink:href="#devpost"></use>
+                        </svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/safin-singh-b2630918a/" target="_blank">
+                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                           <use xlink:href="#linkedin"></use>
                         </svg>
                     </a>
                   </div>
@@ -264,6 +274,11 @@
                            <use xlink:href="#devpost"></use>
                         </svg>
                      </a>
+                     <a href="https://www.linkedin.com/" target="_blank">
+                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                           <use xlink:href="#linkedin"></use>
+                        </svg>
+                    </a>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
@@ -280,6 +295,11 @@
                            <use xlink:href="#devpost"></use>
                         </svg>
                      </a>
+                     <a href="https://www.linkedin.com/" target="_blank">
+                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                           <use xlink:href="#linkedin"></use>
+                        </svg>
+                    </a>
                   </div>
                   <span class="stretch"></span>
                </div>
