add breaks for names

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                <div style="margin: auto; width: 94%; text-align: justify;">
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-left: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black;"">
-                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Raadwan Masum</p>
+                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Raadwan<br> Masum</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/raad1masum" target="_blank">
@@ -240,7 +240,7 @@
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black;">
-                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Safin Singh</p>
+                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Safin<br> Singh</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/safinsingh" target="_blank">
@@ -261,7 +261,7 @@
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
-                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Rohan Juneja</p>
+                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Rohan<br> Juneja</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/rjawesome" target="_blank">
@@ -282,7 +282,7 @@
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
-                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Aadit Gupta</p>
+                        <p class="pixel-font" style="text-align: center; font-size: 3vh;">Aadit<br> Gupta</p>
                      </a>
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/MrWannaCry" target="_blank">
