--- a/index.html
+++ b/index.html
@@ -304,6 +304,10 @@
             </div>
          </div>
       </div>
+      <footer>
+        <p>Copyright 2020 RGBHack<br>
+        <a href="mailto:rgbhack@gmail.com">rgbhack@gmail.com</a></p>
+      </footer>
       <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
       <script
          src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
