scrollspy finally works

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </symbol>
          </svg>
       </svg>
-      <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top header" id="header" data-aos="fade-down">
+      <nav class="navbar navbar-inverse navbar-expand-lg navbar-light shadow fixed-top header" id="header" data-aos="fade-down">
          <div class="container">
             <a href="#">
                <b class="navbar-brand p2p" href="#top"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b>
@@ -54,7 +54,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-               <ul class="navbar-nav ml-auto">
+               <ul class="nav navbar-nav ml-auto">
                   <li class="nav-item">
                      <a class="nav-link" href="#awards">Awards</a>
                   </li>
