remove local svg styling

--- a/index.html
+++ b/index.html
@@ -221,83 +221,75 @@
                      <a style="color: black;"">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Raadwan<br> Masum</p>
                      </a>
-                    <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/raad1masum" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                      <a href="https://devpost.com/raad1masum" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#devpost"></use>
                         </svg>
                     </a>
                     <a href="https://www.linkedin.com/in/raadwan-masum-9147bb1a5/" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#linkedin"></use>
                         </svg>
                     </a>
-                    </div>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Safin<br> Singh</p>
                      </a>
-                    <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/safinsingh" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                      <a href="https://devpost.com/safinsingh" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#devpost"></use>
                         </svg>
                     </a>
                     <a href="https://www.linkedin.com/in/safin-singh-b2630918a/" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#linkedin"></use>
                         </svg>
                     </a>
-                    </div>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Rohan<br> Juneja</p>
                      </a>
-                    <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/rjawesome" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                      <a href="https://devpost.com/rohanj2006" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#devpost"></use>
                         </svg>
                      </a>
-                    </div>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Aadit<br> Gupta</p>
                      </a>
-                    <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/MrWannaCry" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                      <a href="https://devpost.com/MrWannaCry" target="_blank">
-                        <svg class="icon" style="height: 7vh; width: 7vw; display: block; margin: 0 auto; float: center;">
+                        <svg class="icon">
                            <use xlink:href="#devpost"></use>
                         </svg>
                      </a>
-                    </div>
                   </div>
                   <span class="stretch"></span>
                </div>
