--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                      <a style="color: black;"">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Raadwan<br> Masum</p>
                      </a>
+                     <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/raad1masum" target="_blank">
                         <svg class="icon">
@@ -238,10 +239,12 @@
                         </svg>
                     </a>
                   </div>
+                  </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Safin<br> Singh</p>
                      </a>
+                     <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/safinsingh" target="_blank">
                         <svg class="icon">
@@ -258,11 +261,13 @@
                            <use xlink:href="#linkedin"></use>
                         </svg>
                     </a>
+                    </div>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Rohan<br> Juneja</p>
                      </a>
+                     <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/rjawesome" target="_blank">
                         <svg class="icon">
@@ -274,11 +279,13 @@
                            <use xlink:href="#devpost"></use>
                         </svg>
                      </a>
+                     </div>
                   </div>
                   <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black;">
                         <p class="pixel-font" style="text-align: center; font-size: 3vh;">Aadit<br> Gupta</p>
                      </a>
+                     <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
                       <a href="https://github.com/MrWannaCry" target="_blank">
                         <svg class="icon">
@@ -290,6 +297,7 @@
                            <use xlink:href="#devpost"></use>
                         </svg>
                      </a>
+                     </div>
                   </div>
                   <span class="stretch"></span>
                </div>
