--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                      </a>
                      <div style="position: relative; top: 30%; transform: translateY(-50%);">
                      <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
-                      <a href="https://github.com/MrWannaCry" target="_blank">
+                      <a href="https://github.com/aaditgupta21" target="_blank">
                         <svg class="icon">
                            <use xlink:href="#github-icon"></use>
                         </svg>
