--- a/index.html
+++ b/index.html
@@ -349,14 +349,14 @@
                            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg></a>
                          </td> -->
                          <td>
-                           <a href="https://www.google.com"><svg height="30" id="Layer_1" version="1.1" viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
+                           <a href="https://devpost.com/aaditgupta21"><svg height="30" id="Layer_1" version="1.1" viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
                            <g id="XMLID_1_">
                              <path d="M133.7,76H118v90h14.7c30.9,0,45.1-18.1,45.1-45C177.8,90.9,164.9,76,133.7,76z" id="XMLID_6_"></path>
                              <path d="M210.2,0H70.1L0,121l70.1,121h140.1l70.1-121L210.2,0z M132.7,195H89V47h45.8c42.1,0,73.3,20.1,73.3,74 C208.1,172.8,170.6,195,132.7,195z" id="XMLID_9_"></path>
                            </g></svg></a>
                          </td>
                          <td>
-                           <a href="https://www.google.com"><svg height="24" role="img" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                           <a href="https://github.com/aaditgupta21"><svg height="24" role="img" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                            <title>
                              GitHub icon
                            </title>
