change email svg

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <symbol viewBox="0 0 512 512" id="linkedin">
               <path d="M475.074 0H36.926C16.53 0 0 16.531 0 36.926v438.148C0 495.47 16.531 512 36.926 512h438.148C495.47 512 512 495.469 512 475.074V36.926C512 16.53 495.469 0 475.074 0zM181.61 387h-62.347V199.426h62.347zm-31.172-213.188h-.406c-20.922 0-34.453-14.402-34.453-32.402 0-18.406 13.945-32.41 35.274-32.41 21.328 0 34.453 14.004 34.859 32.41 0 18-13.531 32.403-35.274 32.403zM406.423 387h-62.34V286.652c0-25.218-9.027-42.418-31.586-42.418-17.223 0-27.48 11.602-31.988 22.801-1.649 4.008-2.051 9.61-2.051 15.215V387h-62.344s.817-169.977 0-187.574h62.344v26.558c8.285-12.78 23.11-30.96 56.188-30.96 41.02 0 71.777 26.808 71.777 84.421zm0 0"></path>
             </symbol>
+              <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" id="email">
+                  <path d="M464 64H48C21.504 64 0 85.504 0 112v288c0 26.496 21.504 48 48 48h416c26.496 0 48-21.504 48-48V112c0-26.496-21.504-48-48-48zm-56.512 32L256 215.616 104.512 96h302.976zM448 416H64V148.672l192 147.68L448 148.64V416z"></path>
+              </symbol>
          </svg>
       </svg>
       <nav class="navbar navbar-inverse navbar-expand-lg navbar-light shadow fixed-top header" id="header" data-aos="fade-down">
@@ -344,10 +347,6 @@
                    <table class="table" style="text-align: center;">
                      <tbody>
                        <tr>
-                         <!-- <td>
-                           <a href="https://www.google.com"><svg height="24" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                           <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg></a>
-                         </td> -->
                          <td>
                            <a href="https://www.google.com"><svg height="30" id="Layer_1" version="1.1" viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
                            <g id="XMLID_1_">
@@ -385,9 +384,9 @@
               <tbody>
                 <tr>
                   <td>
-                    <svg id="Capa_1" width="30" height="30" style="enable-background:new 0 0 237.832 237.832;" version="1.1" viewbox="0 0 237.832 237.832" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
-                      <path d="M228.977,33.916H8.854C3.969,33.916,0,37.881,0,42.771V195.06c0,4.891,3.969,8.856,8.854,8.856h220.123 c4.887,0,8.855-3.965,8.855-8.856V42.771C237.832,37.881,233.864,33.916,228.977,33.916z M221.026,182.184 c0,4.063-3.364,7.356-7.512,7.356h-12.339V73.379l-76.693,49.79c-1.687,1.096-3.627,1.641-5.566,1.641s-3.88-0.545-5.566-1.641 l-76.692-49.79V189.54h-12.34c-4.147,0-7.512-3.293-7.512-7.356V55.647c0-4.063,3.364-7.356,7.512-7.356h10.176l84.423,54.808 l84.423-54.808h10.176c4.147,0,7.512,3.293,7.512,7.356V182.184z"></path>
-                    </svg>
+                     <svg width="30" height="30" viewBox="0 0 512 512" id="email">
+                        <path d="M464 64H48C21.504 64 0 85.504 0 112v288c0 26.496 21.504 48 48 48h416c26.496 0 48-21.504 48-48V112c0-26.496-21.504-48-48-48zm-56.512 32L256 215.616 104.512 96h302.976zM448 416H64V148.672l192 147.68L448 148.64V416z"></path>
+                     </svg>
                   </td>
                   <td>
                     <a href="https://www.google.com">
