add android icon for rohan

--- a/index.html
+++ b/index.html
@@ -305,10 +305,34 @@
                      <table class="table" style="text-align: center;">
                        <tbody>
                          <tr>
-                           <!-- <td>
-                             <a href="https://www.google.com"><svg height="24" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg></a>
-                           </td> -->
+                           <td>
+                             <a href="https://www.google.com">
+                              <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+ width="24" height="24" viewBox="0 0 920.000000 980.000000"
+ preserveAspectRatio="xMidYMid meet">
+<metadata>
+Created by potrace 1.16, written by Peter Selinger 2001-2019
+</metadata>
+<g transform="translate(0.000000,980.000000) scale(0.100000,-0.100000)"
+fill="#000000" stroke="none">
+<path d="M2985 7565 l2230 -2237 747 751 c412 412 748 754 748 758 0 5 -930
+512 -2067 1128 -1138 616 -2187 1184 -2333 1263 -826 449 -1083 550 -1439 569
+l-116 6 2230 -2238z"/>
+<path d="M150 9387 c-48 -101 -84 -225 -113 -382 l-22 -120 0 -3985 0 -3985
+22 -120 c12 -66 34 -160 48 -210 31 -105 100 -258 115 -253 5 1 1038 1029
+2296 2282 l2286 2279 -2289 2289 c-1258 1258 -2292 2288 -2296 2288 -5 0 -26
+-37 -47 -83z"/>
+<path d="M6463 5712 l-811 -819 813 -813 814 -814 38 18 c47 22 953 514 1048
+569 285 164 529 368 661 552 59 84 128 234 148 322 23 102 21 260 -4 359 -72
+288 -331 575 -739 822 -128 77 -1112 611 -1139 619 -12 3 -253 -234 -829 -815z"/>
+<path d="M4095 3348 c-616 -618 -1620 -1624 -2230 -2237 l-1110 -1113 116 5
+c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
+534 290 972 530 972 535 0 4 -336 345 -747 758 l-748 750 -1120 -1123z"/>
+</g>
+</svg>
+
+                              </a>
+                           </td>
                            <td>
                              <a href="https://www.google.com"><svg height="30" id="Layer_1" version="1.1" viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
                              <g id="XMLID_1_">
