--- a/index.html
+++ b/index.html
@@ -383,11 +383,13 @@
             <table class="table table-borderless" style="text-align: center;">
               <tbody>
                 <tr>
-                  <td>
-                     <svg width="30" height="30" viewBox="0 0 512 512" id="email">
-                        <path d="M464 64H48C21.504 64 0 85.504 0 112v288c0 26.496 21.504 48 48 48h416c26.496 0 48-21.504 48-48V112c0-26.496-21.504-48-48-48zm-56.512 32L256 215.616 104.512 96h302.976zM448 416H64V148.672l192 147.68L448 148.64V416z"></path>
-                     </svg>
-                  </td>
+                     <td>
+                  <a href="mailto:rgbhack@gmail.com">
+                        <svg width="30" height="30" viewBox="0 0 512 512" id="email">
+                           <path d="M464 64H48C21.504 64 0 85.504 0 112v288c0 26.496 21.504 48 48 48h416c26.496 0 48-21.504 48-48V112c0-26.496-21.504-48-48-48zm-56.512 32L256 215.616 104.512 96h302.976zM448 416H64V148.672l192 147.68L448 148.64V416z"></path>
+                        </svg>
+                  </a>
+                     </td>
                   <td>
                     <a href="https://www.google.com">
                       <svg id="Capa_1" width="30" height="30" style="enable-background:new 0 0 215.094 215.094;" version="1.1" viewbox="0 0 215.094 215.094" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
@@ -406,7 +408,7 @@
               </tbody>
             </table>
           </div>
-        <a href="mailto:rgbhack@gmail.com">rgbhack@gmail.com</a></p>
+        </p>
       </footer>
       <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
       <script
