add links to footer

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </a>
                      </td>
                      <td>
-                        <a href="https://www.google.com">
+                        <a href="https://www.youtube.com/channel/UCnNCqJ6-4Yk7NgkuTpL89ZQ">
                            <svg id="Capa_1" width="30" height="30" style="enable-background:new 0 0 215.094 215.094;"
                               version="1.1" viewbox="0 0 215.094 215.094" x="0px" xmlns="http://www.w3.org/2000/svg"
                               y="0px">
@@ -498,7 +498,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </a>
                      </td>
                      <td>
-                        <a href="https://www.google.com"><svg height="30" role="img" viewbox="0 0 24 24" width="30"
+                        <a href="https://github.com/RGBHack"><svg height="30" role="img" viewbox="0 0 24 24" width="30"
                               xmlns="http://www.w3.org/2000/svg">
                               <title>
                                  GitHub icon
