make links open in new tab

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://www.google.com"><svg height="24" viewbox="0 0 24 24" width="24"
+                                 <a href="https://www.google.com" target="_blank"><svg height="24" viewbox="0 0 24 24" width="24"
                                        xmlns="http://www.w3.org/2000/svg">
                                        <path
                                           d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
@@ -248,7 +248,7 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com"><svg height="30" id="Layer_1" version="1.1"
+                                 <a href="https://www.google.com" target="_blank"><svg height="30" id="Layer_1" version="1.1"
                                        viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
                                        y="0px">
                                        <g id="XMLID_1_">
@@ -262,7 +262,7 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com"><svg height="24" role="img" viewbox="0 0 24 24"
+                                 <a href="https://www.google.com" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
                                        width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
@@ -297,7 +297,7 @@
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://www.google.com"><svg height="24" viewbox="0 0 24 24" width="24"
+                                 <a href="https://www.google.com" target="_blank"><svg height="24" viewbox="0 0 24 24" width="24"
                                        xmlns="http://www.w3.org/2000/svg">
                                        <path
                                           d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
@@ -305,7 +305,7 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com"><svg height="30" id="Layer_1" version="1.1"
+                                 <a href="https://www.google.com" target="_blank"><svg height="30" id="Layer_1" version="1.1"
                                        viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
                                        y="0px">
                                        <g id="XMLID_1_">
@@ -319,7 +319,7 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com"><svg height="24" role="img" viewbox="0 0 24 24"
+                                 <a href="https://www.google.com" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
                                        width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
@@ -354,7 +354,7 @@
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://www.google.com">
+                                 <a href="https://www.google.com" target="_blank">
                                     <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                        viewBox="0 0 920.000000 980.000000" preserveAspectRatio="xMidYMid meet">
                                        <metadata>
@@ -381,7 +381,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                                  </a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com"><svg height="30" id="Layer_1" version="1.1"
+                                 <a href="https://www.google.com" target="_blank"><svg height="30" id="Layer_1" version="1.1"
                                        viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
                                        y="0px">
                                        <g id="XMLID_1_">
@@ -395,7 +395,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com"><svg height="24" role="img" viewbox="0 0 24 24"
+                                 <a href="https://www.google.com" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
                                        width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
@@ -430,7 +430,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://devpost.com/aaditgupta21"><svg height="30" id="Layer_1" version="1.1"
+                                 <a href="https://devpost.com/aaditgupta21" target="_blank"><svg height="30" id="Layer_1" version="1.1"
                                        viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
                                        y="0px">
                                        <g id="XMLID_1_">
@@ -444,7 +444,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://github.com/aaditgupta21"><svg height="24" role="img"
+                                 <a href="https://github.com/aaditgupta21" target="_blank"><svg height="24" role="img"
                                        viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
@@ -478,7 +478,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                <tbody>
                   <tr>
                      <td>
-                        <a href="mailto:rgbhack@gmail.com">
+                        <a href="mailto:rgbhack@gmail.com" target="_blank">
                            <svg width="30" height="30" viewBox="0 0 512 512" id="email">
                               <path
                                  d="M464 64H48C21.504 64 0 85.504 0 112v288c0 26.496 21.504 48 48 48h416c26.496 0 48-21.504 48-48V112c0-26.496-21.504-48-48-48zm-56.512 32L256 215.616 104.512 96h302.976zM448 416H64V148.672l192 147.68L448 148.64V416z">
@@ -487,7 +487,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </a>
                      </td>
                      <td>
-                        <a href="https://www.youtube.com/channel/UCnNCqJ6-4Yk7NgkuTpL89ZQ">
+                        <a href="https://www.youtube.com/channel/UCnNCqJ6-4Yk7NgkuTpL89ZQ" target="_blank">
                            <svg id="Capa_1" width="30" height="30" style="enable-background:new 0 0 215.094 215.094;"
                               version="1.1" viewbox="0 0 215.094 215.094" x="0px" xmlns="http://www.w3.org/2000/svg"
                               y="0px">
@@ -498,7 +498,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </a>
                      </td>
                      <td>
-                        <a href="https://github.com/RGBHack"><svg height="30" role="img" viewbox="0 0 24 24" width="30"
+                        <a href="https://github.com/RGBHack" target="_blank"><svg height="30" role="img" viewbox="0 0 24 24" width="30"
                               xmlns="http://www.w3.org/2000/svg">
                               <title>
                                  GitHub icon
