--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://www.google.com" target="_blank"><svg height="24" viewbox="0 0 24 24" width="24"
+                                 <a href="https://www.linkedin.com/in/raadwan-masum-9147bb1a5/" target="_blank"><svg height="24" viewbox="0 0 24 24" width="24"
                                        xmlns="http://www.w3.org/2000/svg">
                                        <path
                                           d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
@@ -248,7 +248,7 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com" target="_blank"><svg height="30" id="Layer_1" version="1.1"
+                                 <a href="https://devpost.com/raad1masum" target="_blank"><svg height="30" id="Layer_1" version="1.1"
                                        viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
                                        y="0px">
                                        <g id="XMLID_1_">
@@ -262,7 +262,7 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
+                                 <a href="https://github.com/raad1masum" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
                                        width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
@@ -297,7 +297,7 @@
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://www.google.com" target="_blank"><svg height="24" viewbox="0 0 24 24" width="24"
+                                 <a href="https://www.linkedin.com/in/safin-singh-b2630918a/" target="_blank"><svg height="24" viewbox="0 0 24 24" width="24"
                                        xmlns="http://www.w3.org/2000/svg">
                                        <path
                                           d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
@@ -305,7 +305,7 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com" target="_blank"><svg height="30" id="Layer_1" version="1.1"
+                                 <a href="https://devpost.com/safinsingh" target="_blank"><svg height="30" id="Layer_1" version="1.1"
                                        viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
                                        y="0px">
                                        <g id="XMLID_1_">
@@ -319,7 +319,7 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
+                                 <a href="https://github.com/safinsingh" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
                                        width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
@@ -354,7 +354,7 @@
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://www.google.com" target="_blank">
+                                 <a href="https://play.google.com/store/apps/developer?id=Rohan+Juneja" target="_blank">
                                     <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                        viewBox="0 0 920.000000 980.000000" preserveAspectRatio="xMidYMid meet">
                                        <metadata>
@@ -381,7 +381,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                                  </a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com" target="_blank"><svg height="30" id="Layer_1" version="1.1"
+                                 <a href="https://devpost.com/rohanj2006" target="_blank"><svg height="30" id="Layer_1" version="1.1"
                                        viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
                                        y="0px">
                                        <g id="XMLID_1_">
@@ -395,7 +395,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://www.google.com" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
+                                 <a href="https://github.com/rjawesome" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
                                        width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
